[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "koi-net-slack-sensor-node"
version = "1.0.0"
description = "KOI-net Slack sensor node"
authors = [
    {name = "Luke Miller", email = "luke@block.science"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "koi-net~=1.1",
    "slack_bolt>=1.26.0",
    "aiohttp",
    "rich"
]

[project.optional-dependencies]
dev = ["twine>=6.0", "build"]

[project.urls]
Homepage = "https://github.com/BlockScience/koi-net-slack-sensor-node/"